...
                    android:textColor="@color/link_color"
                    android:textSize="@dimen/dimen_11sp" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_resto_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:orientation="horizontal"
                app:spanCount="4"
                tools:itemCount="4"
...
