...
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_driver"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:strokeColor="@color/gray7575"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    app:iconTint="@color/uikit_red"
...
