...
            android:layout_marginTop="@dimen/dimen_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/halalkan_primary" />
...
