...
    <string name="label_reason_of_rejection">Reason of Rejection</string>
    <string name="example_reason_reject">Example : Out of Stock, Driver Unavailable, or others.</string>
    <string name="label_are_you_sure">Are You Sure</string>
    <string name="label_this_action_will_delete_post">This action will delete this post</string>
    <string name="label_canceled">Canceled</string>
    <string name="title_no">No</string>
    <string name="title_success">Success</string>
    <string name="message_data_updated_succesfully">Data Updated Successfully</string>
    <string name="message_data_created_succesfully">Data Created Successfully</string>
    <string name="message_data_deleted_succesfully">Data Deleted Successfully</string>
    <string name="message_order_changed_to_cooked">Order status will be changed to cooked</string>

    <string name="title_all">All</string>
...
