<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.appbar.AppBarLayout
                android:id="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageButton
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_baseline_arrow_back_24"
                            app:tint="@color/blue_auth" />

                        <TextView
                            android:id="@+id/page_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/btn_back"
                            android:fontFamily="@font/poppins_medium"
                            android:text="Informasi Dasar Lokasi"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="@dimen/dimen_10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/label_page_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/btn_back"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Silakan masukkan data untuk melanjutkan"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="Foto Lokasi"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <include
                    android:id="@+id/include_photo_preview"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/customview_item_photo_container_preview"/>


                <TextView
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="Nama Lokasi"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Masukkan Nama"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="Deskripsi Lokasi"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Deskripsi Restoran"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:visibility="gone"
                    android:text="Alamat Lokasi"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Alamat Lokasi"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="Nomor Telepon"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_phone"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Misal 628XXX"
                    android:textColor="@color/black"
                    />


                <TextView
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Jenis Makanan"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_type_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:visibility="gone"
                    android:entries="@array/array_type_registrant" />

                <TextView
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:visibility="gone"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Sertifikasi Restoran"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_cert"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:entries="@array/array_type_registrant" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray70"
        android:contentDescription="Button Add Report"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_anim"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="50dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_circle_rgb.json"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>