...
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/message_don_t_have_an_account_yet"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/btn_back"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/title_register_here"
...
